prepare to use the new InventoryBuilder